2010-04-13  Jeffrey Stedfast  <fejj@novell.com>

	* tests/test-streams.c: Use glib's G_GINT64_FORMAT and
	G_GSIZE_FORMAT macros for our various *printf needs to be more
	portable. Thanks to pier11@operamail.com for this patch.

	* gmime/gmime-gpg-context.c: Use g_set_error_literal() when no
	printf-style arguments are needed. Fixes bug #615594. Thanks to
	Tobias Mueller and Christian Persch.

	* Applied patch by pier11@operamail.com to fix the build for
	MingW. Fixes bug #615068.

2010-03-26  Jeffrey Stedfast  <fejj@novell.com>

	Fixes for bug #613653

	* gmime/gmime.c (g_mime_init): Initialize GMimeObject's type
	registry.
	(g_mime_shutdown): Shut it down here.

	* gmime/gmime-object.c (g_mime_object_type_registry_init): Renamed
	a bit and fixed to not use g_atexit(). Also made internal-public.
	(g_mime_object_type_registry_shutdown): Renamed and made
	internal-public. Also set type_hash to NULL after destroying it so
	that a re-init will work.
	(g_mime_object_register_type): Don't init the type system anymore.
	(g_mime_object_new): Same.
	(g_mime_object_new_type): Same here.

2010-03-26  Jeffrey Stedfast  <fejj@novell.com>

	Fixes for bug #598855

	* gmime/gmime-message.c (process_header): Return TRUE if we match
	MIME-Version.
	(message_prepend_header): Don't drop MIME-Version headers.
	(message_append_header): Same.
	(message_set_header): Here too.
	(message_get_header): Only return the hard-coded "1.0" value for
	MIME-Version if it is not set on the header object.
	(message_remove_header): Allow the MIME-Version header to be
	removed.
	(message_get_headers): Only write our own MIME-Version header if
	one isn't already set in the message headers.
	(message_write_to_stream): Same here.

2010-02-02  Jeffrey Stedfast  <fejj@novell.com>

	* README: Bumped version

	* configure.in: Bumped version to 2.4.15

	* build/vs2008/gmime.vcproj: Bumped version.

2010-01-31  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-encodings.h (GMIME_UUENCODE_LEN): Fixed to prevent